--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="libs/p5.sound.min.js"></script>
 
     <script src="libs/save.js"></script>
+    <script src="classes/particle.js"></script>
   </head>
   <body>
     <!-- Main sketch -->
